--- a/cart.html
+++ b/cart.html
@@ -14,53 +14,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script>
     if(!localStorage.getItem('mail'))
-      window.location.href = 'index.html';
+      window.location.href = 'login.html';
   </script>
 </head>
 
 <body>
   <script src="js/general-functions.js"></script>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        <span id="toggler-text">MENU</span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <div class="dropdown">
-            <li class="nav-item" id="navbar-categories">
-              <a class="nav-link dropbtn" role="button" href="categories.html">Categorías</a>
-              <div id="categories-menu">
-              </div>
-            </li>
-          </div>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html" id="vender">Vender</a>
-          </li>
-          <li id="usuario" class="nav-item">
-            <p id="botonLogin" class="nav-link" href="login.html" role="button" data-toggle="modal" data-target="#modalLogin">Iniciar Sesión</p>
-            <div class="dropdown">
-              <div id="conjuntoUsuario">
-                <span id="saludoUsuario"></span>
-                <span id="optionsUserDrp" role="button" class="drop-btn nav-link material-symbols-outlined" style="margin-left: 0px; color: rgb(211, 238, 185);">more_vert</span>
-              </div>
-              <div id="optionsUser">
-                <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
-                <a class="dropdown-item" href="cart.html">Mi carrito</a>
-                <a id="botonLogout" class="dropdown-item" href="login.html">Cerrar Sesión</a>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <nav id="navbar"></nav>
   <main>
 
     <div class="container">
