--- a/cart.html
+++ b/cart.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-  <script src="js/general-functions.js"></script>
-  <nav id="navbar"></nav>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1" id="navbar"></nav>
   <main>
 
     <div class="container">
@@ -243,6 +243,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="js/init.js"></script>
+  <script src="js/general-functions.js"></script>
   <script src="js/login.js"></script>
   <script src="js/jwt-decode.js"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
