--- a/my-profile.html
+++ b/my-profile.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav id="navbar"></nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1" id="navbar"></nav>
   
   <main>
     <div class="container mt-5">
