--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1" id="navbar"></nav>
 
   <main>
-    <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog"></div>
-
     <div class="row jrow">
-      <img src="img/cover_back.png" alt="">
+      <img style='margin: 30px 0px; transform: scale(1.2);' src="img/cover_back.png" alt="">
     </div>
     <div class="row">
       <div class="album py-5 bg-light">
