--- a/my-profile.html
+++ b/my-profile.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script>
     if(!localStorage.getItem('mail'))
@@ -74,6 +77,7 @@
             <div class="col-12">
               <label for="iptImagenPerfil">Imagen de perfil</label>
               <input class="form-control" accept="image/png, image/jpeg" id="iptImagenPerfil" type="file">
+              <button id="deleteProfilePicture" form="" style="display: none;" class="mt-2 btn btn-outline-danger">Borrar foto actual</button>
             </div>
             <input id="guardarCambiosPerfil" type="submit" form="formPerfil" value="Guardar cambios" class="mt-3 mb-3 btn btn-primary">
           </div>
