--- a/product-info.html
+++ b/product-info.html
@@ -38,7 +38,6 @@
             <div class="row" id="allImages">
             </div>
           </div>
-
           <div class="col col-12 col-md-6 col-lg-7">
             <div id="contenedorImg" class="carousel slide" data-bs-interval="5000" data-bs-ride="carousel">
               <div id="carouselImg" class="carousel-inner">
@@ -46,7 +45,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div id="container-info-product" class="pt-3 col col-lg-4">
             <h1 id="nameProd"></h1>
             <p id="descriptionProd"></p>
             <h2 id="costProd"></h2>
