--- a/products.html
+++ b/products.html
@@ -62,7 +62,7 @@
 
         <div class="col-12 col-lg-9">
           <div class="container container-productos">
-            <div id="productos">
+            <div id="productos" class="p-3">
       
             </div>
           </div>
