--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   
     </div>
     
-    <div class="row jrow">
+    <div class="row rowArr jrow">
       <img src="img/cover_back.png" alt="">
     </div>
-    <div class="row">
+    <div class="row rowArr">
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
